# CrossCompiledI2C

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: generic-gcc-avr.cmake  toolchain.cmake
cmake/avr/: avr-toolchain.cmake
cmake/stm32/: blue-pill.cmake  libopencm3.cmake  stm32-toolchain.cmake
include/HAL/: HAL.h
include/I2C/: I2C.h
lib/HAL/: CMakeLists.txt  HAL.c
lib/I2C/: CMakeLists.txt  I2C.c
src/avr/: AvrDemo.c  CMakeLists.txt  USART.c  USART.h
src/common/: CMakeLists.txt  SPI_console.c  SPI_console.h  console.c  console.h  itoa.h  strlen.h
src/desktop/: CMakeLists.txt  DesktopDemo.cpp  Device.cpp  Device.hpp  I2CDevice.cpp  I2CDevice.hpp  LogicAnalyzerProbe.hpp  SPIDevice.cpp  SPIDevice.hpp  signal_logger.cpp  signal_logger.hpp  testInput.txt
src/stm32/: CMakeLists.txt  Stm32Demo.cpp  USART.cpp  USART.hpp
test/: CMakeLists.txt  I2C_HAL_Desktop_Impl_test.cpp  SPI_test.cpp  console_test.cpp
utils/: build-avr.sh  build-desktop.sh  build-stm32.sh
