if(TARGET_PLATFORM STREQUAL "AVR")
  add_avr_library(I2C I2C.c)
  avr_target_link_libraries(I2C HAL)
  avr_target_include_directories(I2C PUBLIC ${CMAKE_SOURCE_DIR}/include)
elseif(TARGET_PLATFORM STREQUAL "DESKTOP")
  add_library(I2C I2C.c)
  target_link_libraries(I2C HAL)
  target_include_directories(I2C PUBLIC ${CMAKE_SOURCE_DIR}/include)
endif()

