include(${CMAKE_SOURCE_DIR}/cmake/stm32/blue-pill.cmake)
include(${CMAKE_SOURCE_DIR}/cmake/stm32/libopencm3.cmake)
include(${CMAKE_SOURCE_DIR}/cmake/stm32/st-link.cmake)

add_executable(
  Stm32Demo
  Stm32Demo.cpp
)
add_dependencies(
  Stm32Demo
  libopencm3
)
target_link_libraries(
  Stm32Demo
  ${LIBOPENCM3_BLUEPILL_LIBRARIES}
)
add_bin_from_elf(
  Stm32Demo.bin
  Stm32Demo
)
add_stlink_upload_target(Stm32Demo.bin)